# enterprise-rag-platform

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml
.github/workflows/: deploy-aws.yml  llm-e2e-smoke-test.yml
configs/domains/: ai_governance.yaml
docs/adr/: ADR-001-Parser-Framework-Design.md  ADR-002-Chunking-Strategy.md  ADR-003-Domain-Agnostic-Platform-Design.md  ADR-004-Knowledge-Domain-Abstraction.md
docs/architecture/: CONTRACT_DECISIONS.md  HLD.md  LLD-000-Domain-Abstraction.md  LLD-002-Chunking.md  MASTER_ROADMAP.md
docs/implementation_journal/: Day_000_Project_Init.md  Day_001_LLD_Ingestion.md  Day_002_Chunking_Design.md  Day_003_Ingestion_Implementation copy.md  Day_004_PDF_Parser.md  Day_005_Domain_Abstraction.md
docs/interview_notes/: chunking_notes.md
docs/runbooks/: git_workflow.md
evaluation/: golden_dataset.json  run_eval.py
scripts/: ci_adapter_smoke_test.py  llm_e2e_smoke_test.py
src/app/: config.py  main.py  schemas.py  service_factory.py
src/evaluation/: __init__.py  benchmark.py  dataset.py  experiment_tracker.py  generation_metrics.py  metrics.py  report.py  runner.py  schemas.py  system_metrics.py
src/ingestion/: ingestion_pipeline.py
src/mlops/: __init__.py  artifacts.py  backup.py  configuration.py  deployment.py  drift.py  feature_flags.py  governance.py  lifecycle.py  manager.py  permissions.py  recovery.py  registry.py  retraining.py  scheduler.py  schemas.py  secrets.py  telemetry.py
tests/unit/: conftest.py  test_api.py  test_bedrock_answerer.py  test_document_contract.py  (+53 more)
(+48 files in other folders)
