[project]
name = "enterprise-rag-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "openai>=2.46.0",
    "pydantic>=2.11,<3.0",
    "pypdf>=5.0,<6.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=7.1.0",
    "python-docx>=1.1,<2.0",
    "uvicorn>=0.35,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
