[project]
name = "enterprise-rag-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "fastapi>=0.116,<1.0",
    "httpx>=0.28,<1.0",
    "openai>=2.46.0",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "presidio-analyzer>=2.2.363",
    "pydantic>=2.11,<3.0",
    "pypdf>=5.0,<6.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=7.1.0",
    "python-docx>=1.1,<2.0",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.35,<1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
